2018-08-03  John Ericson  <john.ericson@obsidian.systems>

	* testsuite/config-guess.sh: Make 'rc' a local variable.
	* testsuite/config-sub.sh: Likewise.

2018-08-02  John Ericson  <john.ericson@obsidian.systems>

	* testsuite/config-guess.sh: Re-indent with tabs.
	* testsuite/config-sub.sh: Likewise.

2018-08-02  Ben Elliston  <bje@gnu.org>

	* config.guess: Fix SC2234 diagnostic from Shellcheck ("Remove
	superfluous (..) around test command". Also remove redirection as
	test(1) should never produce any output.

2018-07-30  Ben Elliston  <bje@gnu.org>

	* Makefile (check-guess, check-sub): Run tests under bash.

2018-07-25  John Ericson  <john.ericson@obsidian.systems>

	* config.sub: Fix some more i386-pc-* defaults.
	* testsuite/config-sub.data: Update.

2018-07-18  Ben Elliston  <bje@gnu.org>

	From Apostolos Syropoulos <asyropoulos@gmail.com>:
	* config.guess (i86pc:SunOS:5.*:* | i86xen:SunOS:5.*:*): Use the
	isainfo(1) command to guess what kind of system we have. Running
	isainfo -b returns either "32" or "64".

2018-07-18  Mikaël Urankar  <mikael.urankar@gmail.com>

	* config.guess (arm*:FreeBSD:*:*): New.
	* testsuite/config-guess.data: Add a test case.

2018-07-15  Ben Elliston  <bje@gnu.org>

	* testsuite/config-guess.data: Sort.

2018-07-13  Ben Elliston  <bje@gnu.org>

	* testsuite/config-guess.sh: Strip off spaces around pipe
	delimiter as test data is read in.
	(run_config_guess): Set IFS to '|'.
	* testsuite/config-guess.data: Use ' | ' as the delimeter.

2018-07-13  Ben Elliston  <bje@gnu.org>

	* config.guess (set_cc_for_build): Disable SC2039 ("In POSIX sh,
	RANDOM is undefined").
	* Makefile (shellcheck): Don't disable SC2039 globally.

2018-07-13  Ben Elliston  <bje@gnu.org>

	* config.guess: Disable SC2154 and SC2172 Shellcheck warnings.
	* Makefile (shellcheck): Don't disable SC2172 globally.

2018-07-13  John Ericson  <john.ericson@obsidian.systems>

	* config.sub: Don't recognize every *-unknown as a basic_machine.
